@@ -18,6 +18,9 @@
 #import <CoreData/CoreData.h>
 #import <Cocoa/Cocoa.h>
 
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wdeprecated-declarations"
+
 CFStringRef
 getDraggedFileURL()
 {
