@@ -40,6 +40,7 @@
 #include "base/TMethodJob.h"
 #endif
 
+#include <charconv>
 #include <iostream>
 #include <sstream>
 #include <stdio.h>
@@ -81,11 +82,13 @@ App::~App() {
 }
 
 void App::version() {
-  static const size_t buffer_size = 500;
-  static const size_t cpight_size = 200;
+  const std::string date = __DATE__;
+  std::string year = date.substr(date.size() - 4);
 
-  char copyrightBuffer[cpight_size];
-  snprintf(copyrightBuffer, cpight_size, kCopyright, kBuildYear);
+  const size_t kBufferSize = 500;
+  const size_t kCopyrightSize = 200;
+  char copyrightBuffer[kCopyrightSize];
+  snprintf(copyrightBuffer, kCopyrightSize, kCopyright, year.c_str());
 
   std::stringstream version;
   version << kVersion;
@@ -93,9 +96,9 @@ void App::version() {
   version << " (" << GIT_SHA_SHORT << ")";
 #endif
 
-  char buffer[buffer_size];
+  char buffer[kBufferSize];
   snprintf(
-      buffer, buffer_size, "%s %s, protocol version %d.%d\n%s",
+      buffer, kBufferSize, "%s %s, protocol version %d.%d\n%s",
       argsBase().m_pname, version.str().c_str(), kProtocolMajorVersion,
       kProtocolMinorVersion, copyrightBuffer);
 
