@@ -159,8 +159,8 @@ std::vector<String> AppUtilWindows::getKeyboardLayoutList() {
     for (int i = 0; i < uLayouts; ++i) {
       String code("", 2);
       GetLocaleInfoA(
-          MAKELCID(((UINT)lpList[i] & 0xffffffff), SORT_DEFAULT),
-          LOCALE_SISO639LANGNAME, &code[0], code.size());
+          MAKELCID(((ULONG_PTR)lpList[i] & 0xffffffff), SORT_DEFAULT),
+          LOCALE_SISO639LANGNAME, &code[0], static_cast<int>(code.size()));
       layoutLangCodes.push_back(code);
     }
 
@@ -178,7 +178,8 @@ String AppUtilWindows::getCurrentLanguageCode() {
   if (hklLayout) {
     auto localLayoutID = MAKELCID(LOWORD(hklLayout), SORT_DEFAULT);
     GetLocaleInfoA(
-        localLayoutID, LOCALE_SISO639LANGNAME, &code[0], code.size());
+        localLayoutID, LOCALE_SISO639LANGNAME, &code[0],
+        static_cast<int>(code.size()));
   }
 
   return code;
